--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
-  <title>Vite App</title>
+  <title>Mykolas Mankevicius</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div id="app"></div>
