--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="apple-touch-icon"
         sizes="180x180"
         href="/apple-touch-icon.png">
@@ -16,7 +16,7 @@
         type="image/png"
         sizes="16x16"
         href="/favicon-16x16.png">
-        
+
   <link rel="icon"
         href="/favicon.ico" />
 
@@ -28,9 +28,34 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module"
-          src="/src/main.js"></script>
+    <main class="container flex items-center justify-center min-h-screen py-10">
+        <div class="text-lg">
+          <div class="max-w-lg overflow-hidden rounded-lg">
+            <img alt="Bambucka and me" src="/src/assets/bambuckaandme.png" />
+          </div>
+          <h1 class="mt-4 text-5xl font-display">Mykolas Mankevicius</h1>
+          <p class="font-body">
+            Hello this is my space.
+          </p>
+          <p>Currently working on <a class="text-teal-500 underline" href="https://octafest.com">Octafest.com</a></p>
+          <p class="mt-4">What else?</p>
+          <ul class="ml-5 list-disc">
+            <li><a class="text-teal-500 underline" href="https://octo-ui.netlify.app">Octo-UI</a></li>
+            <li><a class="text-teal-500 underline" href="https://octo-form.netlify.app/">Octo-Forms</a></li>
+            <li><a class="text-teal-500 underline" href="https://octo-page-builder.netlify.app">Octo-Pagebuilder</a></li>
+          </ul>
+          <p class="mt-4">You can reach me at:</p>
+          <ul class="ml-5 list-disc">
+            <li><a class="text-teal-500 underline" href="https://twitter.com/mmmykolas">Twitter</a></li>
+            <li><a class="text-teal-500 underline" href="https://www.linkedin.com/in/mykolas-mankevicius-42311093/">Linked-in</a></li>
+            <li>Discord: Mykolas#0327</li>
+          </ul>
+        </div>
+      </main>
+
+
+      <script type="module" src="/src/main.js"></script>
+
 </body>
 
 </html>
